# gaussquad-cpp

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: GaussQuadConfig.cmake.in
examples/: CMakeLists.txt  example_quadratures.cpp  example_runge.cpp
include/gaussquad/: GaussianQuadratures.h  OrthogonalPolynomials.h  gaussquad.h
test/: CMakeLists.txt  test_GaussianQuadratures.cpp
